added slide informations

--- a/index.html
+++ b/index.html
@@ -29,30 +29,31 @@
         <div class="product">
             <div class="image"><img src="./images/coach1.jpg"></div>
             <h2>MARCUS</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus aliquid architecto cumque dolorem corporis at consequatur facere, repellat beatae neque, quibusdam eaque necessitatibus obcaecati, autem vel blanditiis eius dolores officia!</p>
+            <p>I frequently get asked how and when I first got started working out. Well, I was first motivated to workout as a kid by watching “The Incredible Hulk” on T.V. The size and strength of the Hulk captivated me and from there I was hooked.<br>
+                    ​
+                    I first started lifting weights at the tender age of 12 when my big brother from the Big Brother’s program enrolled me on his membership. From there, I worked on developing my body and mind as it kept me away from trouble.</p>
             <span>Read more...</span>
         </div>
         <div class="product">
                 <div class="image"><img src="./images/coach2.jpg"></div>
-                <h2>JENIFER</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus aliquid architecto cumque dolorem corporis at consequatur facere, repellat beatae neque, quibusdam eaque necessitatibus obcaecati, autem vel blanditiis eius dolores officia!</p>
+                <h2>JENNIFER</h2>
+                <p>For the past five years she has been mentored by Sean Lowe, in one-on-one personal training, group training, and group fitness classes.  Beth has been a participant in Extreme Boot Camp since the day the program started at Club USA.  <br>She has a passion for training, and truly knows that with commitment and determination you can achieve your goals. Her programs incorporate: cardio, weight training, interval training, TRX suspension, and plyometric training.  </p>
                 <span>Read more...</span>
         </div>
         <div class="product">
                 <div class="image"><img src="./images/coach3.jpg"></div>
                 <h2>CHRISTOPHER</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus aliquid architecto cumque dolorem corporis at consequatur facere, repellat beatae neque, quibusdam eaque necessitatibus obcaecati, autem vel blanditiis eius dolores officia!</p>
+                <p>I enjoy motivating others, traveling, music, camping, going to the beach etc… I eat, sleep and breathe health and fitness. Health and fitness has formed the foundation of my social, academic, and work life. I utilize what is known at the FITT principle, which stands for Frequency, Intensity, Time& Type. <br>The most important thing to me is that you achieve your fitness goals in the shortest possible time, and in the most enjoyable manner.</p>
                 <span>Read more...</span>
         </div>
     </div>
 </section>
 <section class="slider">
     <ul class="slides">
-        <li class="slide"><img src="./images/img_12.jpg"></li>
-        <li class="slide"><img src="./images/img_10.jpg"></li>
-        <li class="slide"><img src="./images/img_5.jpg"></li>
-        <li class="slide"><img src="./images/img_3.jpg"></li>
-        <li class="slide"><img src="./images/img_12.jpg"></li>
+        <li class="slide"><h3>Chalenge Yourself in 15 weeks !</h3><p>If you want to make big changes to the way you look, you need to make a big effort. Just ask Glenn Parker. When Parker approached personal trainer Nick Mitchell, he weighed 98.2kg, with body fat of 23.9 percent. After just over three months of following Mitchell’s fitness plan, he had lost 13kg of fat, added 7kg of muscle and had a body to be proud of, with body fat of just 6.8 percent.</p><img src="./images/img_12.jpg"></li>
+        <li class="slide"><h3>Stay in touch with Your coach...</h3><p>Need constant motivation? Stay in touch with our coaches. Report about Your new goals, and try to develop New You...</p><img src="./images/img_10.jpg"></li>
+        <li class="slide"><h3>New cardio formula!</h3><p>When someone mentions cardio, you may think "necessary evil," but take a step back and withhold judgment for just a moment. As reluctant as you might be to hop on that treadmill—worried it'll be boring or that it'll zap your gains—give cardio a chance. When properly paired with weight training, a good cardio plan will lead you to an ideal world of fat loss and help you carve a great, shapely figure—which, of course, includes great glutes.</p><img src="./images/img_5.jpg"></li>
+        <li class="slide"><h3>Chalenge Yourself in 15 weeks !</h3><p>If you want to make big changes to the way you look, you need to make a big effort. Just ask Glenn Parker. When Parker approached personal trainer Nick Mitchell, he weighed 98.2kg, with body fat of 23.9 percent. After just over three months of following Mitchell’s fitness plan, he had lost 13kg of fat, added 7kg of muscle and had a body to be proud of, with body fat of just 6.8 percent.</p><img src="./images/img_12.jpg"></li>
     </ul>
     <div class="slider-controls">
         <ul class="dots">
