--- a/index.html
+++ b/index.html
@@ -68,19 +68,19 @@
     <p class="section-header">OUR PRODUCTS</p>
     <div class="container">
         <div class="article">
-                <img class="icon" src="../images/icon-01.png">
+                <img class="icon" src="./images/icon-01.png">
                 <h2>Cardio</h2>
                 <p>Cardio exercise is one of the most important things you can do for your body, whether you want to lose weight, burn fat, or generally improve your health. You can use machines like a treadmill or an elliptical trainer, or you can create your own workout at home with a variety of cardio exercises like jogging in place, jumping jacks, or burpees. Anything that gets your heart rate into your target heart rate zone will work, but there are some workouts that give you a little more bang for your buck.</p>
                 <span>Read more...</span>
         </div>
         <div class="article">
-                <img class="icon" src="../images/icon-02.png">
+                <img class="icon" src="./images/icon-02.png">
                 <h2>Strenght</h2>
                 <p>When properly performed, strength training can provide significant functional benefits and improvement in overall health and well-being, including increased bone, muscle, tendon, and ligament strength and toughness, increased fitness and improved cardiac function. Training commonly uses the technique of progressively increasing the force output of the muscle through incremental weight increases and uses a variety of exercises to target specific muscle groups.</p>
                 <span>Read more...</span>
         </div>
         <div class="article">
-                <img class="icon" src="../images/icon-04.png">
+                <img class="icon" src="./images/icon-04.png">
                 <h2>Personal Coach</h2>
                 <p>What are personal coaching services? The purpose of working with a personal coach is to maximize your potential. A personal coach will work with you 1:1 to identify your specific goals, strengths and opportunity areas. As you develop a relationship with your coach, they gain a deeper understanding of what works best for you. As a result, your personal coach can provide you with proven strategies and customized plans to help you get the results you’re after. </p>
                 <span>Read more...</span>
