added baner and slider controls

--- a/index.html
+++ b/index.html
@@ -50,18 +50,15 @@
 </section>
 <section class="slider">
     <ul class="slides">
-        <li class="slide"><h3>Chalenge Yourself in 15 weeks !</h3><p>If you want to make big changes to the way you look, you need to make a big effort. Just ask Glenn Parker. When Parker approached personal trainer Nick Mitchell, he weighed 98.2kg, with body fat of 23.9 percent. After just over three months of following Mitchell’s fitness plan, he had lost 13kg of fat, added 7kg of muscle and had a body to be proud of, with body fat of just 6.8 percent.</p><img src="./images/img_12.jpg"></li>
-        <li class="slide"><h3>Stay in touch with Your coach...</h3><p>Need constant motivation? Stay in touch with our coaches. Report about Your new goals, and try to develop New You...</p><img src="./images/img_10.jpg"></li>
-        <li class="slide"><h3>New cardio formula!</h3><p>When someone mentions cardio, you may think "necessary evil," but take a step back and withhold judgment for just a moment. As reluctant as you might be to hop on that treadmill—worried it'll be boring or that it'll zap your gains—give cardio a chance. When properly paired with weight training, a good cardio plan will lead you to an ideal world of fat loss and help you carve a great, shapely figure—which, of course, includes great glutes.</p><img src="./images/img_5.jpg"></li>
-        <li class="slide"><h3>Chalenge Yourself in 15 weeks !</h3><p>If you want to make big changes to the way you look, you need to make a big effort. Just ask Glenn Parker. When Parker approached personal trainer Nick Mitchell, he weighed 98.2kg, with body fat of 23.9 percent. After just over three months of following Mitchell’s fitness plan, he had lost 13kg of fat, added 7kg of muscle and had a body to be proud of, with body fat of just 6.8 percent.</p><img src="./images/img_12.jpg"></li>
+        <li class="slide"><h3>Chalenge Yourself in 15 weeks !</h3><p>If you want to make big changes to the way you look, you need to make a big effort. Just ask Glenn Parker. When Parker approached personal trainer Nick Mitchell, he weighed 98.2kg, with body fat of 23.9 percent.</p><img src="./images/img_12.jpg"></li>
+        <li class="slide"><h3>Stay in touch with Your coach...</h3><p>Need constant motivation? Stay in touch with our coaches. Report about Your new goals, and try to develop New You...</p><img src="./images/img_13.jpg"></li>
+        <li class="slide"><h3>New cardio formula!</h3><p>When someone mentions cardio, you may think "necessary evil," but take a step back and withhold judgment for just a moment. As reluctant as you might be to hop on that treadmill—worried it'll be boring or that it'll zap your gains—give cardio a chance.</p><img src="./images/img_14.jpg"></li>
+        <li class="slide"><h3>Chalenge Yourself in 15 weeks !</h3><p>If you want to make big changes to the way you look, you need to make a big effort. Just ask Glenn Parker. When Parker approached personal trainer Nick Mitchell, he weighed 98.2kg, with body fat of 23.9 percent.</p><img src="./images/img_12.jpg"></li>
     </ul>
     <div class="slider-controls">
-        <ul class="dots">
-            <li class="dot"></li>
-            <li class="dot"></li>
-            <li class="dot"></li>
-            <li class="dot"></li>
-        </ul>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
     </div>
 </section>
 <section class="articles">
@@ -87,6 +84,7 @@
         </div>
     </div>
 </section>
+<section class="banner"><h3>STAY <span>MOTIVATED</span> !</h3><p>"Believe in yourself! Have faith in your abilities! Without a humble but reasonable confidence in your own powers you cannot be successful or happy."</p></section>
 <script src="./app.js"></script>
 </body>
 </html>
