added banner and footer

--- a/index.html
+++ b/index.html
@@ -84,7 +84,36 @@
         </div>
     </div>
 </section>
-<section class="banner"><h3>STAY <span>MOTIVATED</span> !</h3><p>"Believe in yourself! Have faith in your abilities! Without a humble but reasonable confidence in your own powers you cannot be successful or happy."</p></section>
+<section class="banner">
+    <h3>STAY <span>MOTIVATED</span> !</h3>
+    <p>"Believe in yourself! Have faith in your abilities! Without a humble but reasonable confidence in your own powers you cannot be successful or happy."</p>
+</section>
+<section class="contact">
+        <p class="section-header"> GET IN TOUCH</p>
+        <div class="contact-form">
+            <form>
+                <input type="text" placeholder="Your Name">
+                <input type="email" placeholder="Your E-Mail">
+                <textarea placeholder="Message"></textarea>
+                <span>SEND</span>
+            </form>
+            <div class="image"></div>
+</div>
+</section>
+<footer>
+        <div class="container">
+                <p class="logo">Health <span>&</span> Fitness</p>
+                <ul class="menu">
+                    <li><img src="./images/fb.svg"></li>
+                    <li><img src="./images/in.svg"></li>
+                    <li><img src="./images/tw.svg"></li>
+                    <li><img src="./images/go.svg"></li>
+                </ul>
+        </div>
+        <div class="container">
+                8759 Sepulveda Blvd, North Hills, CA 91343, United States of America
+        </div>
+</footer>
 <script src="./app.js"></script>
 </body>
 </html>
