added 3 RWD breakpoints

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <section class="slider">
     <ul class="slides">
         <li class="slide"><h3>Chalenge Yourself in 15 weeks !</h3><p>If you want to make big changes to the way you look, you need to make a big effort. Just ask Glenn Parker. When Parker approached personal trainer Nick Mitchell, he weighed 98.2kg, with body fat of 23.9 percent.</p><img src="./images/img_12.jpg"></li>
-        <li class="slide"><h3>Stay in touch with Your coach...</h3><p>Need constant motivation? Stay in touch with our coaches. Report about Your new goals, and try to develop New You...</p><img src="./images/img_13.jpg"></li>
+        <li class="slide"><h3>Stay in touch with Your coach!</h3><p>Need constant motivation? Stay in touch with our coaches. Report about Your new goals, and try to develop New You...</p><img src="./images/img_13.jpg"></li>
         <li class="slide"><h3>New cardio formula!</h3><p>When someone mentions cardio, you may think "necessary evil," but take a step back and withhold judgment for just a moment. As reluctant as you might be to hop on that treadmill—worried it'll be boring or that it'll zap your gains—give cardio a chance.</p><img src="./images/img_14.jpg"></li>
         <li class="slide"><h3>Chalenge Yourself in 15 weeks !</h3><p>If you want to make big changes to the way you look, you need to make a big effort. Just ask Glenn Parker. When Parker approached personal trainer Nick Mitchell, he weighed 98.2kg, with body fat of 23.9 percent.</p><img src="./images/img_12.jpg"></li>
     </ul>
